@@ -48,6 +48,7 @@ Version 1.9.9+svn:
    * Added option in advanced preferences that allows the twelve-hour clock
       format to be used.
    * Reenabled "delay shroud updates".
+   * Slowed units are now tinted to be recognizable at a glance.
 
  * Miscellaneous and bug fixes:
    * Reintroduced the "Liminal" alignment. Liminal units fight best during
