@@ -62,6 +62,7 @@ Version 1.9.9+svn:
    * Chanaged: Disable pango markup in unit names (bug #17788)
    * It is now possible to remove multiple installed add-ons at the same
      time
+   * Slowed units are now tinted to be recognizable at a glance
  * WML engine:
    * Readded the liminal alignment
    * Added four-difficulty versions of certain macros: QUANTITY4,
